Finished Game / Session implementation, now working on database management

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,6 +70,8 @@
     "deque": "cpp",
     "queue": "cpp",
     "ranges": "cpp",
-    "span": "cpp"
+    "span": "cpp",
+    "functional": "cpp",
+    "fstream": "cpp"
   }
 }
